--- a/public/templates/memberListTpl.html
+++ b/public/templates/memberListTpl.html
@@ -1,3 +1,3 @@
 <ul ng-repeat='member in members'>
-  <li>{{ member.email }}</li>
+  <li><a href="javascript:;" ng-click='goto("/members/" + member.id)'>{{ member.email }}</a></li>
 </ul>
