--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -1,6 +1,13 @@
 .container {
   height: 100%; }
-.content { @include span-columns(9); }
+.content {
+  @include span-columns(9);
+  @include pad(); }
 .side-panel {
   height: 100%;
   @include span-columns(3); }
+
+@include media(1400px) {
+  .side-panel { @include span-columns(2); }
+  .content { @include span-columns(10); }
+}
