gravatar image directive working :lipstick:
I created a directive to fetch the gravatar images, I don't see the
point of doing in the backend for the time being (or at all for that
matter). This should close #22 (I don't think this feature will need
any change as the directive works perfectly).

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,5 +1,5 @@
 $base-unit: 1.5rem;
-$base-border-color: #333;
+// $base-border-color: #333;
 $base-accent-color: #46BA7E;
 $base-border-radius: 0px;
 $base-line-height: $base-unit;
