--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -2,7 +2,7 @@
   height: 100%; }
 .content {
   @include span-columns(9);
-  @include pad(); }
+  @include pad(default default default 0); }
 .side-panel {
   height: 100%;
   @include span-columns(3); }
