front end form for creating a course
it still has no interaction with backend, just created the route,
the controller and the template. I also changed user=>member and the
default route in the router is '/signin' not '/signup', but I will
change it to 404 I think.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,12 @@
       </div>
       <div class="card">
         <div class="card-header" ng-click='signout()'>
-          <a class='navbar-item navbar-link' href='javascript:;'>logout</a>
+          <a href='javascript:;'>logout</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" ng-click='goto("/courses/new")'>
+          <a href='javascript:;'>new course</a>
         </div>
       </div>
     </nav>
