member-course n-n relationship working :metal:
Gave up on has_and_belongs_to_many and instead using an intermediate
model. Tweaked the styles a bit as well :)

--- a/app/assets/stylesheets/_side-panel.css.scss
+++ b/app/assets/stylesheets/_side-panel.css.scss
@@ -3,6 +3,6 @@
 
   .card {
     @include calc(width, '100% - #{$base-unit}');
-    margin: $base-unit / 4 $base-unit / 2;
+    margin: $base-unit / 2 $base-unit / 2 0;
   }
 }
