--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,6 +1,6 @@
 $base-unit: 1.5rem;
-$base-border-radius: 2px;
+$base-border-radius: 3px;
 $base-font-size: 1rem;
 $base-line-height: $base-unit;
-$base-body-color: #1B1F20;
+$base-body-color: #fff;
 $large-screen: 1200px;
