--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,19 @@
   <div class="container">
     <nav class="side-panel">
       <div class="card">
-        <div class="card-image">
+        <div class="card-image" ng-click='goto("/members/" + member.id)'>
           <img gravatar-image data-gravatar-email='{{ member.email }}' alt="">
         </div>
-        <div class="card-header">
-          {{ member.email }}
+        <div class="card-header" ng-click='goto("/members/" + member.id)'>
+          {{ member.name | uppercase }} {{ member.last_name | uppercase }}
         </div>
         <div class="card-copy">
-          {{ member.name }} <br />
           {{ member.summary | limitTo: 200 }}
         </div>
         <div class="card-stats">
           <ul>
-            <li>98<span>Items</span></li>
-            <li>298<span>Things</span></li>
-            <li>923<span>Objects</span></li>
+            <li>{{ member.courses.length || 0 }}<span>Courses</span></li>
+            <li>{{ member.projects.length || 0 }}<span>Projects</span></li>
           </ul>
         </div>
       </div>
@@ -34,8 +32,11 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-header" ng-click='signout()'>
-          <a href='javascript:;'>logout</a>
+        <div ng-if='member' class="card-header" ng-click='signout()'>
+          <a href='javascript:;'>sign out</a>
+        </div>
+        <div ng-if='!member' class="card-header" ng-click='goto("/signin")'>
+          <a href='javascript:;'>sign in</a>
         </div>
       </div>
       <div class="card">
