course list and form working! :godmode:
It turns out that `type` is a reserved word (which should've been
obvious but whatever), so I changed type to course_type, besides
that the rest is pretty straight forward. New template, new
controller and actions. The front end side is starting to become
a monster, when I have something working I should pause and
restructure the whole app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,11 @@
         </div>
       </div>
       <div class="card">
+        <div class="card-header" ng-click='goto("/courses")'>
+          <a href='javascript:;'>courses</a>
+        </div>
+      </div>
+      <div class="card">
         <div class="card-header" ng-click='goto("/courses/new")'>
           <a href='javascript:;'>new course</a>
         </div>
