changed colors basically, not much to explain

--- a/app/assets/stylesheets/_side-panel.css.scss
+++ b/app/assets/stylesheets/_side-panel.css.scss
@@ -1,5 +1,5 @@
 .side-panel {
-  // background-color: #1B1F20;
+  background-color: $side-panel-bg-color;
 
   .card {
     @include calc(width, '100% - #{$base-unit}');
