--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,6 +1,6 @@
 $base-unit: 1.5rem;
-$base-border-radius: 3px;
+$base-border-radius: 1px;
 $base-font-size: 1rem;
 $base-line-height: $base-unit;
-$base-body-color: #fff;
+$base-body-color: #DAD8CC;
 $large-screen: 1200px;
