--- a/app/assets/stylesheets/unauthorized.css.scss
+++ b/app/assets/stylesheets/unauthorized.css.scss
@@ -13,7 +13,7 @@ body {
   line-height: $unit;
   font-size: 100%;
   color: #333;
-  background-color: darken(#2c3e50, 10%);
+  background-color: #2F3848;
   margin: 0;
   padding: 0;
   height: 100%;
