started implementing notifications
On the new course form I've started adding notifications to handle
the events of success and error, still some polishing to do.
Working towards #28

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -4,3 +4,8 @@ $base-font-size: 1rem;
 $base-line-height: $base-unit;
 $base-body-color: #DAD8CC;
 $large-screen: 1200px;
+$error: #E6344A;
+$success: #72C968;
+$alert: #FBB351;
+$info: #04779B;
+$notification-base-color: #FEFEF6;
