--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,7 @@ $unit: 1.5rem;
 @import 'bitters/base';
 @import 'variables';
 @import 'refills/import';
+@import 'notifications';
 @import 'side-panel';
 @import 'layout';
 
