--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -1,13 +1,15 @@
+.main-container {
+  @include span-columns(10 of 13);
+  @include pad(default default default);
+  height: 100%;
+  position: relative; }
 .container {
   height: 100%; }
-.content {
-  @include span-columns(9);
-  @include pad(default default default 0); }
 .side-panel {
-  height: 100%;
-  @include span-columns(3); }
+  @include span-columns(3 of 13, block-collapse);
+  height: 100%; }
 
 @include media(1400px) {
-  .side-panel { @include span-columns(2); }
-  .content { @include span-columns(10); }
+  .side-panel { @include span-columns(2 of 12); }
+  .content { @include span-columns(10 of 12); }
 }
