basic filtering :penguin: but no caching
so basic filtering works but it's probably crap because I make a new
AJAX request every time and there's probably a way to cache results.
But f*ck it. It works for now.

--- a/public/templates/memberListTpl.html
+++ b/public/templates/memberListTpl.html
@@ -1,3 +1,8 @@
-<ul ng-repeat='member in members'>
+Available filters:
+<p ng-click='filterByCourse()'>clear</p>
+<div ng-repeat='course in courses'>
+  <p ng-click='filterByCourse(course)'>{{ course.course_type }} - {{ course.city }} - {{ course.start_date | date: 'longDate' }}</p>
+</div>
+<ul ng-repeat='member in course.members'>
   <li><a href="javascript:;" ng-click='goto("/members/" + member.id)'>{{ member.email }}</a></li>
 </ul>
