--- a/app/assets/stylesheets/_side-panel.css.scss
+++ b/app/assets/stylesheets/_side-panel.css.scss
@@ -1,8 +1,54 @@
+@mixin items-transition {
+  @include transition(125ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all);
+}
 .side-panel {
   background-color: $side-panel-bg-color;
 
   .card {
     @include calc(width, '100% - #{$base-unit}');
     margin: $base-unit / 2 $base-unit / 2 0;
+  }
+}
+
+.side-panel .menu {
+  li {
+    height: $unit * 2;
+    @include items-transition;
+    position: relative;
+    &:last-child { border-bottom: 1px solid $base-font-color; }
+    padding: $unit / 2;
+    display: block;
+    width: 100%;
+    border-top: 1px solid $base-font-color;
+    a:not(:first-child) {
+      font-weight: bold;
+      position: relative; z-index: 1; }
+    .overlay {
+      @include items-transition;
+      z-index: 0;
+      background-color: $base-alternate-color;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+    }
+
+    &:hover { cursor: pointer; }
+    &:not(:first-child):hover {
+      border-top: 1px solid darken($base-alternate-color, 10%);
+      border-bottom: 1px solid darken($base-alternate-color, 10%);
+      a { color: grayscale(invert($base-alternate-color)); }
+      .overlay {
+        width: 100%;
+      }
+    }
+  }
+
+  a {
+    color: $base-font-color;
+    &:hover {
+      color: darken($base-font-color, 10%);
+    }
   }
 }
