more rework on the side panel
I got rid of the yellow color because I felt it was too tacky

--- a/app/assets/stylesheets/_side-panel.css.scss
+++ b/app/assets/stylesheets/_side-panel.css.scss
@@ -1,8 +1,11 @@
 @mixin items-transition {
-  @include transition(125ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all);
+  @include transition(125ms cubic-bezier(0.250, 0.250, 0.750, 0.750) opacity);
 }
+$border: 1px solid rgba($base-font-color, .2);
+
 .side-panel {
   background-color: $side-panel-bg-color;
+  box-shadow: 5px 0 5px rgba(0, 0, 0, 0.3);
 
   .card {
     @include calc(width, '100% - #{$base-unit}');
@@ -12,36 +15,34 @@
 
 .side-panel .menu {
   li {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
     height: $unit * 2;
-    @include items-transition;
     position: relative;
-    &:last-child { border-bottom: 1px solid $base-font-color; }
     padding: $unit / 2;
     display: block;
     width: 100%;
-    border-top: 1px solid $base-font-color;
+    border-top: $border;
+    border-right: $border;
+    &:first-child { border-top: none; }
+    &:last-child  { border-bottom: $border; }
     a:not(:first-child) {
       font-weight: bold;
       position: relative; z-index: 1; }
     .overlay {
       @include items-transition;
       z-index: 0;
-      background-color: $base-alternate-color;
+      background-color: darken($side-panel-bg-color, 10%);
       position: absolute;
       top: 0;
       left: 0;
-      width: 0;
+      width: 100%;
+      opacity: 0;
       height: 100%;
     }
 
     &:hover { cursor: pointer; }
-    &:not(:first-child):hover {
-      border-top: 1px solid darken($base-alternate-color, 10%);
-      border-bottom: 1px solid darken($base-alternate-color, 10%);
-      a { color: grayscale(invert($base-alternate-color)); }
-      .overlay {
-        width: 100%;
-      }
+    &:not(:first-child):hover .overlay {
+      opacity: 1;
     }
   }
 
