--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@ $unit: 1.5rem;
 @import 'variables';
 @import 'refills/import';
 @import 'notifications';
+@import 'tags';
 @import 'side-panel';
 @import 'layout';
 
