--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,35 +1,32 @@
 /*
  *= require pace/themes/yellow/pace-theme-minimal
+ *= require material/angular-material
  *= require_self
  */
 $unit: 1.5rem;
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
 @import 'bourbon';
-@import 'neat/neat';
-@import 'bitters/base';
+@import 'bitters/variables';
 @import 'variables';
-@import 'refills/import';
 @import 'notifications';
-@import 'tags';
-@import 'side-panel';
-@import 'layout';
 
 * { box-sizing: border-box; }
 html { height: 100%; }
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   line-height: $unit;
   font-size: 100%;
-  color: #333;
-  background-color: lighten(#000, 97%);
   margin: 0;
   padding: 0;
   height: 100%;
 }
-
-.card-image {
-  max-height: 230px !important;
-  height: 230px;
-  width: 100%;
-  margin: 0 auto;
+.material-button-raised,
+.material-button-raised.section material-button,
+section .material-button {
+  display: inline-block;
+  width: 9em;
+  margin: .3em;
+  line-height: 25px;
 }
+
+.material-button-fab { position: fixed; right: 28px; background-color: white; }
