--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= yield %>
+  <div ng-app='ironalumni' layout-fill>
+    <%= yield %>
+  </div>
 </body>
 </html>
