--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,11 +22,26 @@ body {
 }
 .material-button-raised,
 .material-button-raised.section material-button,
-section .material-button {
+section .material-button,
+material-button.big {
   display: inline-block;
   width: 9em;
   margin: .3em;
   line-height: 25px;
 }
 
-.material-button-fab { position: fixed; right: 28px; background-color: white; }
+.material-button-fab { z-index: 99 !important; position: fixed; right: 28px; background-color: white; }
+.material-sidenav-left .material-button-colored {
+  color: white;
+  &:hover{
+    background-color: rgba(white, .2);
+  }
+}
+
+.material-theme-light-green {
+  @extend .material-theme-green;
+  padding: $unit / 2 $unit / 2;
+  height: auto;
+  color: white;
+  background-color: tint(#0f9d58, 3%) !important;
+}
