--- a/app/views/front/_side_panel.html.erb
+++ b/app/views/front/_side_panel.html.erb
@@ -1,11 +1,14 @@
-<material-sidenav class="material-sidenav-left" component-id="left">
+<material-sidenav class="material-sidenav-left  material-theme-light" component-id="left">
 
-  <material-toolbar class="material-theme-indigo">
-    <h1 class="material-toolbar-tools">Signed in as {{ member.name }}</h1>
+  <material-toolbar class='material-whiteframe-z1' layout-align='center center'>
+    <div class="material-toolbar-tools">
+      <material-icon icon='/img/icons/logo_ironhack48x48.ico' style='height: 48px; width: 48px;'></material-icon>
+      <div>alumni network</div>
+    </div>
   </material-toolbar>
 
   <material-content layout='vertical' class="material-content-padding">
-    <material-button class="material-button-colored" ng-click='goto("/members/" + member.id)'>
+    <material-button class="material-button-colored" ng-click='goto("/profile")'>
       MY PROFILE
     </material-button>
     <material-button class="material-button-colored" ng-click='goto("/members")'>
@@ -17,7 +20,7 @@
     <material-button class="material-button-colored" ng-if='member' ng-click='signout()'>
       SIGN OUT
     </material-button>
-    <material-button ng-click="closeSidenav()" class hide-md>
+    <material-button class="material-button-colored" ng-click="closeSidenav()" class hide-md>
       Close menu
     </material-button>
   </material-content>
