--- a/public/templates/courseListTpl.html
+++ b/public/templates/courseListTpl.html
@@ -7,5 +7,6 @@
         {{ course.start_date | date: 'longDate' }} - {{ course.end_date | date: 'longDate' }}
       </p>
     </div>
+    <material-ripple initial-opacity="0.4" opacity-decay-velocity="1.75"></material-ripple>
   </material-item>
 </material-list>
