getting ready for the demo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,8 @@ material-button.big {
   margin: 16px;
 }
 
+.face.no-shadow { border: none; cursor: pointer; }
+
 .custom-select {
   border: none;
   margin: .3em;
