--- a/public/templates/memberProfileTpl.html
+++ b/public/templates/memberProfileTpl.html
@@ -24,7 +24,7 @@
 
     <material-input-group class="{{ styles.highlight.input }}">
       <label for='i5'>Current employer</label>
-      <material-input id='i5' type="text" ng-model='member.employer' layout-fill />
+      <material-input id='i5' type="text" ng-model='member.employer.name' layout-fill />
     </material-input-group>
 
     <material-input-group class="{{ styles.highlight.input }}">
