--- a/public/templates/memberListTpl.html
+++ b/public/templates/memberListTpl.html
@@ -1,27 +1,46 @@
-<!-- <material-button ng-click='filterByCourse()' class='material-button-raised'>ALL</material-button> -->
-<div>
-Filter by bootcamp:
-<select
-  ng-model='selectedCourse'
-  class='custom-select material-whiteframe-z1'
-  ng-options="formatCourse(c) for c in courses"
-  ng-change="filterByCourse()">
-</select>
-</div>
-<div>
-Filter by employer: <b>NIY</b><!--
-<select
-  ng-model='selectedEmployer'
-  class='custom-select material-whiteframe-z1'
-  ng-options="formatEmployer(e) for e in employers">
-</select> -->
-</div>
-<!-- <material-button ng-click='filterByCourse(course)' ng-repeat='course in courses' class="material-button-raised {{ styles[course.course_type] }}">
-  {{ course.city | uppercase | limitTo: 3 }} {{ course.start_date | date: "MMM yyyy" }}
-</material-button> -->
+<material-list>
+  <material-item>
+    <div class="material-tile-left" ng-click="clearFilter()">
+      <img src='/img/icons/cross.png' class="face no-shadow">
+    </div>
+    <div class="material-tile-content">
+      <h2>
+        Filter by bootcamp:
+      </h2>
+      <h3>
+        <select
+          required='required'
+          ng-model='selectedCourse'
+          class='custom-select material-whiteframe-z1'
+          ng-options="formatCourse(c) for c in courses"
+          ng-change="filterByCourse()">
+        </select>
+      </h3>
+    </div>
+  <material-item>
+  </material-item>
+    <div class="material-tile-left" ng-click="clearFilter()">
+      <img src='/img/icons/cross.png' class="face no-shadow">
+    </div>
+    <div class="material-tile-content">
+      <h2>
+        Filter by employer:
+      </h2>
+      <h3>
+        <select
+          required='required'
+          ng-model='selectedEmployer'
+          class='custom-select material-whiteframe-z1'
+          ng-options="formatEmployer(e) for e in employers"
+          ng-change="filterByEmployer()">
+        </select>
+      </h3>
+    </div>
+  </material-item>
+</material-list>
 
 <material-list>
-  <material-item ng-repeat="member in course.members">
+  <material-item ng-if='members' ng-repeat="member in members">
     <div class="material-tile-left">
       <img gravatar-image data-gravatar-email='{{ member.email }}' class="face">
     </div>
